-Fixed DOB parsing for Registration and PetReport creation. Now a four-digit year will always be parsed and provided, which should prevent 500 Server Errors from occurring. -Fixed some PetMatch dialog table dimensions to make it look tighter and more flexible across browsers. - Added a message to log in to vote for PetMatch.html and PetMatch_full.html templates. Also clipped some offending URL Javascript variables that aren't needed anymore. -added CSRF Token to PetReport_full.html template - was missing.

--- a/project/matching/static/matching/css/style.css
+++ b/project/matching/static/matching/css/style.css
@@ -140,8 +140,6 @@
 }
 
 #pmdp-container {
-
-
 }
 
 #pmdp-title {
@@ -160,7 +158,7 @@
 }
 
 #pmdp-info-table {
-	width: 800px;
+	width: 600px;
 	height:250px;
 	padding:5px;
 	margin:10px auto;
@@ -168,21 +166,31 @@
 	word-wrap: break-word;
 	overflow-y:auto;
 	overflow-x:auto;	
+	border:1px solid darkgrey;
+	border-radius:5px;
 }
 
 #pmdp-info-table .pet-info-header {
+	font-family:epm-font-bolder;
 	display:inline-block;
-	width:130px;
+	width:140px;
 	font-weight:bold;
 }
 
 #pmdp-info-table .pet-info-data {
 	display:inline-block;
-	width:325px;
+	width:215px;
+}
+
+#pmdp-info-table tbody {
+	display:block;
 }
 
 #pmdp-info-table tbody tr {
 	overflow-x:break-word;
+	display:block;
+	margin:5px auto;
+	width: 700px;
 }
 
 #pmdp-vote-actions {
